--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@expo/metro-runtime": "~3.2.1",
     "expo": "~51.0.5",
     "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
+    "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
@@ -22,8 +23,9 @@
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.5"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel-new": "^3.9.2",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
